minor changes in methods