@@ -3,8 +3,8 @@ package regul.test;
 import regul.src.RegExprHome;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
-import static org.junit.jupiter.api.Assertions.*;
+
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 
 
 class RegExprHomeTest {
@@ -13,8 +13,7 @@ class RegExprHomeTest {
         String[] input = {"ab", "aab", "abbaabbabaaa", "aaacbbbbb", "abccaasdaaa", "", "abbb"};
         Boolean[] expected = {true, false, true, false, false, false, true};
         Boolean[] output = Arrays.stream(input)
-                .map(s -> (boolean) RegExprHome.onlyOdd(s))
-                .collect(Collectors.toList())
+                .map(s -> (boolean) RegExprHome.onlyOdd(s)).toList()
                 .toArray(Boolean[]::new);
 
         assertArrayEquals(expected, output);
@@ -25,8 +24,7 @@ class RegExprHomeTest {
         String[] input = {"ab", "1aab", "c_ab"};
         Boolean[] expected = {true, false, true};
         Boolean[] output = Arrays.stream(input)
-                .map(s -> (boolean) RegExprHome.isIden(s))
-                .collect(Collectors.toList())
+                .map(s -> (boolean) RegExprHome.isIden(s)).toList()
                 .toArray(Boolean[]::new);
 
         assertArrayEquals(expected, output);
@@ -34,26 +32,24 @@ class RegExprHomeTest {
 
     @org.junit.jupiter.api.Test
     void cntIden() {
-        String[] input = { " ab  8vb , kl  ", "a 2a *a_", ""};
+        String[] input = {" ab  8vb , kl  ", "a 2a *a_", ""};
         Integer[] output = Arrays.stream(input)
-                .mapToInt(s -> RegExprHome.cntIden(s))
-                .boxed()
-                .collect(Collectors.toList())
+                .mapToInt(RegExprHome::cntIden)
+                .boxed().toList()
                 .toArray(Integer[]::new);
 
-        assertArrayEquals(new Integer[] {2, 1, 0}, output);
+        assertArrayEquals(new Integer[]{2, 1, 0}, output);
     }
 
     @org.junit.jupiter.api.Test
     void distIden() {
-        String[] input = { " ab  8vb , kl, kl  ", "a 2a *a_, 2a, b", ""};
+        String[] input = {" ab  8vb , kl, kl  ", "a 2a *a_, 2a, b", ""};
         Integer[] output = Arrays.stream(input)
-                .mapToInt(s -> RegExprHome.distIden(s))
-                .boxed()
-                .collect(Collectors.toList())
+                .mapToInt(RegExprHome::distIden)
+                .boxed().toList()
                 .toArray(Integer[]::new);
 
-        assertArrayEquals(new Integer[] {2, 2, 0}, output);
+        assertArrayEquals(new Integer[]{2, 2, 0}, output);
     }
 
     @org.junit.jupiter.api.Test
